# ncdr-backend-service

./: .env  README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
cosmos-with-fastapi/: insert_data.py
src/: entrypoint.sh  my_uvicorn_worker.py  pyproject.toml  requirements.txt  setup.py
src/fastapi_app/: app.py  archive_app.py
